ui for managing my events (my events, list of teams, lsit of team members)

--- a/app/src/main/res/layout/fragment_order_command_data_step.xml
+++ b/app/src/main/res/layout/fragment_order_command_data_step.xml
@@ -93,7 +93,7 @@
                 app:layout_constraintStart_toStartOf="@id/fragment_order_command_data_step_return_button"
                 app:layout_constraintTop_toBottomOf="@id/fragment_order_command_data_step_command_name_edit_text"
                 tools:itemCount="3"
-                tools:listitem="@layout/item_command_member" />
+                tools:listitem="@layout/item_team_member" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
