--- a/app/src/main/res/layout/item_subcategory_check.xml
+++ b/app/src/main/res/layout/item_subcategory_check.xml
@@ -9,6 +9,7 @@
         android:layout_width="32dp"
         android:layout_height="32dp"
         android:layout_marginEnd="24dp"
+        android:enabled="false"
         android:button="@drawable/bg_checkbox_state"
         app:layout_constraintBottom_toBottomOf="@id/check_text"
         app:layout_constraintEnd_toEndOf="parent"
