--- a/app/src/main/res/layout/fragment_password_generation.xml
+++ b/app/src/main/res/layout/fragment_password_generation.xml
@@ -25,16 +25,15 @@
             android:id="@+id/fragment_password_generation_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="17dp"
             android:text="Создание пароля"
             android:textColor="@color/white"
             android:textColorHint="#9D9E9E"
             android:textSize="24sp"
-            android:layout_marginStart="17dp"
-            app:layout_constraintStart_toEndOf="@id/fragment_password_generation_return_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/fragment_password_generation_return_button"
             app:layout_constraintBottom_toBottomOf="@id/fragment_password_generation_return_button"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/fragment_password_generation_return_button"
+            app:layout_constraintTop_toTopOf="@id/fragment_password_generation_return_button" />
 
         <ImageView
             android:id="@+id/fragment_password_generation_image"
@@ -42,52 +41,74 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:src="@drawable/ic_password_creation"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fragment_password_generation_title"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/fragment_password_generation_title" />
 
         <TextView
             android:id="@+id/fragment_password_generation_title_1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="50dp"
             android:text="Придумайте пароль"
             android:textColor="@color/purple_500"
             android:textColorHint="#9D9E9E"
             android:textSize="20sp"
-            android:layout_marginTop="50dp"
-            android:layout_marginStart="24dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fragment_password_generation_image"
-            />
+            app:layout_constraintTop_toBottomOf="@id/fragment_password_generation_image" />
 
-        <EditText
-            android:id="@+id/fragment_password_generation_edit_text_1"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="25dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/bg_gradient_dark_grey_button"
-            android:drawableLeft="@drawable/ic_auth_password"
-            android:drawablePadding="16dp"
-            android:hint="Пароль"
-            android:inputType="textPassword"
-            android:padding="20dp"
-            android:textColorHint="#9D9E9E"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            app:layout_constraintTop_toBottomOf="@id/fragment_password_generation_title_1" />
+            app:layout_constraintTop_toBottomOf="@id/fragment_password_generation_title_1"
+            app:passwordToggleEnabled="true">
 
-        <ImageView
-            android:id="@+id/fragment_auth_password_show"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="20dp"
-            android:src="@drawable/ic_password_hidden"
-            android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="@id/fragment_password_generation_edit_text_1"
-            app:layout_constraintEnd_toEndOf="@id/fragment_password_generation_edit_text_1"
-            app:layout_constraintTop_toTopOf="@id/fragment_password_generation_edit_text_1" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/fragment_password_generation_edit_text_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:drawableStart="@drawable/ic_auth_password"
+                android:hint="@string/password_login"
+                android:drawablePadding="10dp"
+                android:inputType="textPassword"
+                android:textColor="@color/white"
+                android:textColorHint="#9D9E9E"
+                android:textSize="14sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!--        <EditText-->
+        <!--            android:id="@+id/fragment_password_generation_edit_text_1"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginHorizontal="25dp"-->
+        <!--            android:layout_marginTop="20dp"-->
+        <!--            android:background="@drawable/bg_gradient_dark_grey_button"-->
+        <!--            android:drawableLeft="@drawable/ic_auth_password"-->
+        <!--            android:drawablePadding="16dp"-->
+        <!--            android:hint="Пароль"-->
+        <!--            android:inputType="textPassword"-->
+        <!--            android:padding="20dp"-->
+        <!--            android:textColorHint="#9D9E9E"-->
+        <!--            android:textColor="@color/white"-->
+        <!--            android:textSize="14sp"-->
+        <!--            app:layout_constraintTop_toBottomOf="@id/fragment_password_generation_title_1" />-->
+
+        <!--        <ImageView-->
+        <!--            android:id="@+id/fragment_auth_password_show"-->
+        <!--            android:layout_width="30dp"-->
+        <!--            android:layout_height="30dp"-->
+        <!--            android:layout_marginEnd="20dp"-->
+        <!--            android:src="@drawable/ic_password_hidden"-->
+        <!--            android:scaleType="centerCrop"-->
+        <!--            app:layout_constraintBottom_toBottomOf="@id/fragment_password_generation_edit_text_1"-->
+        <!--            app:layout_constraintEnd_toEndOf="@id/fragment_password_generation_edit_text_1"-->
+        <!--            app:layout_constraintTop_toTopOf="@id/fragment_password_generation_edit_text_1" />-->
 
         <EditText
             android:id="@+id/fragment_password_generation_edit_text_2"
@@ -101,18 +122,18 @@
             android:hint="Пароль"
             android:inputType="textPassword"
             android:padding="20dp"
-            android:textColorHint="#9D9E9E"
             android:textColor="@color/white"
+            android:textColorHint="#9D9E9E"
             android:textSize="14sp"
-            app:layout_constraintTop_toBottomOf="@id/fragment_password_generation_edit_text_1" />
+            app:layout_constraintTop_toBottomOf="@id/et_password" />
 
         <ImageView
             android:id="@+id/fragment_auth_password_show_2"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginEnd="20dp"
-            android:src="@drawable/ic_password_hidden"
             android:scaleType="centerCrop"
+            android:src="@drawable/ic_password_hidden"
             app:layout_constraintBottom_toBottomOf="@id/fragment_password_generation_edit_text_2"
             app:layout_constraintEnd_toEndOf="@id/fragment_password_generation_edit_text_2"
             app:layout_constraintTop_toTopOf="@id/fragment_password_generation_edit_text_2" />
@@ -135,16 +156,15 @@
             android:id="@+id/fragment_password_generation_policy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:gravity="center"
             android:text="Нажимая кнопку Создать, вы соглашаетесь с политикой конфеденциальности и правилами пользования."
             android:textColor="@color/white"
             android:textColorHint="#9D9E9E"
-            android:gravity="center"
             android:textSize="16sp"
-            android:layout_marginTop="48dp"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fragment_password_generation_continue_button"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/fragment_password_generation_continue_button" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
