--- a/app/src/main/res/layout/fragment_password_generation.xml
+++ b/app/src/main/res/layout/fragment_password_generation.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#181a20">
@@ -10,30 +11,41 @@
         android:layout_height="wrap_content"
         android:paddingBottom="30dp">
 
-        <ImageView
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/fragment_password_generation_return_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="30dp"
-            android:scaleType="center"
-            android:src="@drawable/ic_arrow_white_left"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            app:navigationIcon="@drawable/ic_arrow_white_left"
+            app:title="Заполните ваши данные"
+            app:titleTextAppearance="@style/Toolbar.TitleText"
+            app:titleTextColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
-        <TextView
-            android:id="@+id/fragment_password_generation_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="17dp"
-            android:text="Создание пароля"
-            android:textColor="@color/white"
-            android:textColorHint="#9D9E9E"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="@id/fragment_password_generation_return_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/fragment_password_generation_return_button"
-            app:layout_constraintTop_toTopOf="@id/fragment_password_generation_return_button" />
+<!--        <ImageView-->
+<!--            android:id="@+id/fragment_password_generation_return_button"-->
+<!--            android:layout_width="30dp"-->
+<!--            android:layout_height="30dp"-->
+<!--            android:layout_marginStart="15dp"-->
+<!--            android:layout_marginTop="15dp"-->
+<!--            android:scaleType="center"-->
+<!--            android:src="@drawable/ic_arrow_white_left"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/fragment_password_generation_title"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="17dp"-->
+<!--            android:text="Создание пароля"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textColorHint="#9D9E9E"-->
+<!--            android:textSize="20sp"-->
+<!--            app:layout_constraintBottom_toBottomOf="@id/fragment_password_generation_return_button"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toEndOf="@id/fragment_password_generation_return_button"-->
+<!--            app:layout_constraintTop_toTopOf="@id/fragment_password_generation_return_button" />-->
 
         <ImageView
             android:id="@+id/fragment_password_generation_image"
@@ -43,7 +55,7 @@
             android:src="@drawable/ic_password_creation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fragment_password_generation_title" />
+            app:layout_constraintTop_toBottomOf="@id/fragment_password_generation_return_button" />
 
         <TextView
             android:id="@+id/fragment_password_generation_title_1"
@@ -59,11 +71,13 @@
             app:layout_constraintTop_toBottomOf="@id/fragment_password_generation_image" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/et_password"
+            android:id="@+id/et_password1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="25dp"
             android:layout_marginTop="20dp"
+            android:hint="@string/password_login"
+            android:textColorHint="@color/white"
             android:background="@drawable/bg_gradient_dark_grey_button"
             app:layout_constraintTop_toBottomOf="@id/fragment_password_generation_title_1"
             app:passwordToggleEnabled="true">
@@ -72,72 +86,39 @@
                 android:id="@+id/fragment_password_generation_edit_text_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
+                android:layout_marginHorizontal="10dp"
+                android:backgroundTint="@color/card_bg"
                 android:drawableStart="@drawable/ic_auth_password"
-                android:hint="@string/password_login"
                 android:drawablePadding="10dp"
                 android:inputType="textPassword"
                 android:textColor="@color/white"
-                android:textColorHint="#9D9E9E"
                 android:textSize="14sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <!--        <EditText-->
-        <!--            android:id="@+id/fragment_password_generation_edit_text_1"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_marginHorizontal="25dp"-->
-        <!--            android:layout_marginTop="20dp"-->
-        <!--            android:background="@drawable/bg_gradient_dark_grey_button"-->
-        <!--            android:drawableLeft="@drawable/ic_auth_password"-->
-        <!--            android:drawablePadding="16dp"-->
-        <!--            android:hint="Пароль"-->
-        <!--            android:inputType="textPassword"-->
-        <!--            android:padding="20dp"-->
-        <!--            android:textColorHint="#9D9E9E"-->
-        <!--            android:textColor="@color/white"-->
-        <!--            android:textSize="14sp"-->
-        <!--            app:layout_constraintTop_toBottomOf="@id/fragment_password_generation_title_1" />-->
-
-        <!--        <ImageView-->
-        <!--            android:id="@+id/fragment_auth_password_show"-->
-        <!--            android:layout_width="30dp"-->
-        <!--            android:layout_height="30dp"-->
-        <!--            android:layout_marginEnd="20dp"-->
-        <!--            android:src="@drawable/ic_password_hidden"-->
-        <!--            android:scaleType="centerCrop"-->
-        <!--            app:layout_constraintBottom_toBottomOf="@id/fragment_password_generation_edit_text_1"-->
-        <!--            app:layout_constraintEnd_toEndOf="@id/fragment_password_generation_edit_text_1"-->
-        <!--            app:layout_constraintTop_toTopOf="@id/fragment_password_generation_edit_text_1" />-->
-
-        <EditText
-            android:id="@+id/fragment_password_generation_edit_text_2"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/et_password2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="25dp"
             android:layout_marginTop="20dp"
+            android:hint="@string/password_login"
+            android:textColorHint="@color/white"
             android:background="@drawable/bg_gradient_dark_grey_button"
-            android:drawableLeft="@drawable/ic_auth_password"
-            android:drawablePadding="16dp"
-            android:hint="Пароль"
-            android:inputType="textPassword"
-            android:padding="20dp"
-            android:textColor="@color/white"
-            android:textColorHint="#9D9E9E"
-            android:textSize="14sp"
-            app:layout_constraintTop_toBottomOf="@id/et_password" />
+            app:layout_constraintTop_toBottomOf="@id/et_password1"
+            app:passwordToggleEnabled="true">
 
-        <ImageView
-            android:id="@+id/fragment_auth_password_show_2"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="20dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/ic_password_hidden"
-            app:layout_constraintBottom_toBottomOf="@id/fragment_password_generation_edit_text_2"
-            app:layout_constraintEnd_toEndOf="@id/fragment_password_generation_edit_text_2"
-            app:layout_constraintTop_toTopOf="@id/fragment_password_generation_edit_text_2" />
-
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/fragment_password_generation_edit_text_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:backgroundTint="@color/card_bg"
+                android:drawableStart="@drawable/ic_auth_password"
+                android:drawablePadding="10dp"
+                android:inputType="textPassword"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/fragment_password_generation_continue_button"
@@ -150,7 +131,7 @@
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="16sp"
-            app:layout_constraintTop_toBottomOf="@id/fragment_auth_password_show_2" />
+            app:layout_constraintTop_toBottomOf="@id/et_password2" />
 
         <TextView
             android:id="@+id/fragment_password_generation_policy"
