--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -71,4 +71,8 @@
         <item name="boxBackgroundMode">none</item>
     </style>
 
+    <style name="Toolbar.TitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">20sp</item>
+    </style>
+
 </resources>
