--- a/app/src/main/res/drawable/bg_circle_button.xml
+++ b/app/src/main/res/drawable/bg_circle_button.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="32">
   <path
       android:pathData="M16,0L16,0A16,16 0,0 1,32 16L32,16A16,16 0,0 1,16 32L16,32A16,16 0,0 1,0 16L0,16A16,16 0,0 1,16 0z"
-      android:fillColor="#181A20"
+      android:fillColor="#33FFFFFF"
       android:fillAlpha="0.5"/>
 </vector>
