--- a/app/src/main/res/layout/fragment_profile_auth.xml
+++ b/app/src/main/res/layout/fragment_profile_auth.xml
@@ -24,8 +24,8 @@
 
         <ImageView
             android:id="@+id/image1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
             android:layout_marginTop="60dp"
             android:src="@drawable/ic_logo"
             app:layout_constraintEnd_toEndOf="parent"
