add temporary moments

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,10 +11,10 @@
 <!--        android:icon="@drawable/ic_favorites"-->
 <!--        android:title="@string/title_favorites" />-->
 
-    <item
-        android:id="@+id/navigation_qr"
-        android:icon="@drawable/ic_qr"
-        android:title="@string/qr" />
+<!--    <item-->
+<!--        android:id="@+id/navigation_qr"-->
+<!--        android:icon="@drawable/ic_qr"-->
+<!--        android:title="@string/qr" />-->
 
     <item
         android:id="@+id/navigation_my_tickets"
