--- a/app/src/main/res/layout/fragment_location_step.xml
+++ b/app/src/main/res/layout/fragment_location_step.xml
@@ -169,21 +169,21 @@
                 android:textSize="14sp"
                 app:layout_constraintTop_toBottomOf="@id/fragment_location_step_street" />
 
-            <Button
-                android:id="@+id/fragment_create_organization_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="24dp"
-                android:background="@drawable/bg_gradient_dark_grey_button"
-                android:paddingHorizontal="32dp"
-                android:paddingVertical="16dp"
-                android:text="Укажите на карте"
-                android:textColor="@color/prompt_color"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/fragment_location_step_flat" />
+<!--            <Button-->
+<!--                android:id="@+id/fragment_create_organization_button"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="24dp"-->
+<!--                android:layout_marginTop="24dp"-->
+<!--                android:layout_marginEnd="24dp"-->
+<!--                android:background="@drawable/bg_gradient_dark_grey_button"-->
+<!--                android:paddingHorizontal="32dp"-->
+<!--                android:paddingVertical="16dp"-->
+<!--                android:text="Укажите на карте"-->
+<!--                android:textColor="@color/prompt_color"-->
+<!--                android:textSize="16sp"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/fragment_location_step_flat" />-->
 
             <TextView
                 android:id="@+id/fragment_event_page_location_text_1"
@@ -198,7 +198,7 @@
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/fragment_create_organization_button"/>
+                app:layout_constraintTop_toBottomOf="@id/fragment_location_step_flat"/>
 
             <TextView
                 android:id="@+id/fragment_create_organization_title_5"
