--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#181a20">
+    android:background="@color/bg_color">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -15,12 +15,12 @@
             android:id="@+id/fragment_registration_return_button"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:navigationIcon="@drawable/ic_arrow_white_left"
             app:title="Заполните ваши данные"
             app:titleTextAppearance="@style/Toolbar.TitleText"
-            app:titleTextColor="@color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:titleTextColor="@color/white" />
 
         <ImageView
             android:id="@+id/fragment_registration_user_image"
@@ -36,8 +36,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             app:layout_constraintBottom_toBottomOf="@+id/fragment_registration_user_image"
-            app:layout_constraintEnd_toEndOf="@id/fragment_registration_user_image"
-            />
+            app:layout_constraintEnd_toEndOf="@id/fragment_registration_user_image" />
 
         <EditText
             android:id="@+id/fragment_registration_user_name_edit_text"
@@ -48,8 +47,8 @@
             android:background="@drawable/bg_gradient_dark_grey_button"
             android:hint="Имя фимилия пользователя"
             android:padding="20dp"
-            android:textColorHint="#9D9E9E"
             android:textColor="@color/white"
+            android:textColorHint="#9D9E9E"
             android:textSize="14sp"
             app:layout_constraintTop_toBottomOf="@id/fragment_registration_user_image" />
 
@@ -62,8 +61,8 @@
             android:background="@drawable/bg_gradient_dark_grey_button"
             android:hint="Никнэйм пользователя"
             android:padding="20dp"
-            android:textColorHint="#9D9E9E"
             android:textColor="@color/white"
+            android:textColorHint="#9D9E9E"
             android:textSize="14sp"
             app:layout_constraintTop_toBottomOf="@id/fragment_registration_user_name_edit_text" />
 
@@ -77,8 +76,8 @@
             android:hint="День рождение"
             android:inputType="date"
             android:padding="20dp"
-            android:textColorHint="@color/grey_default"
             android:textColor="@color/white"
+            android:textColorHint="@color/grey_default"
             android:textSize="14sp"
             app:layout_constraintTop_toBottomOf="@id/fragment_registration_user_nickname_edit_text" />
 
@@ -92,8 +91,8 @@
             android:hint="Эл. почта"
             android:inputType="textEmailAddress"
             android:padding="20dp"
-            android:textColorHint="#9D9E9E"
             android:textColor="@color/white"
+            android:textColorHint="#9D9E9E"
             android:textSize="14sp"
             app:layout_constraintTop_toBottomOf="@id/fragment_registration_user_birthday_text_view" />
 
@@ -105,10 +104,10 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/bg_gradient_dark_grey_button"
             android:hint="+7 (000) 000 00 00"
-            android:padding="20dp"
             android:inputType="phone"
-            android:textColorHint="#9D9E9E"
+            android:padding="20dp"
             android:textColor="@color/white"
+            android:textColorHint="#9D9E9E"
             android:textSize="14sp"
             app:layout_constraintTop_toBottomOf="@id/fragment_registration_user_email_edit_text" />
 
@@ -120,12 +119,11 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/bg_gradient_dark_grey_button"
             android:hint="Пол"
-            android:textColorHint="@color/grey_default"
             android:padding="20dp"
             android:textColor="@color/white"
+            android:textColorHint="@color/grey_default"
             android:textSize="14sp"
-            app:layout_constraintTop_toBottomOf="@id/fragment_registration_user_phone_edit_text"
-            />
+            app:layout_constraintTop_toBottomOf="@id/fragment_registration_user_phone_edit_text" />
 
         <Button
             android:id="@+id/fragment_registration_continue"
