--- a/app/src/main/res/layout/fragment_cancel_rule_step.xml
+++ b/app/src/main/res/layout/fragment_cancel_rule_step.xml
@@ -108,7 +108,7 @@
                 android:layout_marginTop="8dp"
                 android:background="@drawable/bg_gradient_dark_grey_button"
                 android:gravity="start"
-                android:hint="Правила отмены вашего мероприятии..."
+                android:hint="Правила отмены вашего мероприятия..."
                 android:minHeight="320dp"
                 android:padding="20dp"
                 android:paddingBottom="40dp"
