--- a/app/src/main/res/drawable/bg_date_time_card_selected.xml
+++ b/app/src/main/res/drawable/bg_date_time_card_selected.xml
@@ -3,10 +3,10 @@
     android:shape="rectangle">
     <stroke
         android:width="1dp"
-        android:color="#584DF4" />
+        android:color="@color/app_accent" />
     <gradient
         android:angle="270"
-        android:startColor="#21584DF4"
-        android:endColor="#21584DF4" />
+        android:startColor="@color/bg_purple"
+        android:endColor="@color/bg_purple" />
     <corners android:radius="11dp" />
 </shape>
