--- a/app/src/main/res/layout/item_organization.xml
+++ b/app/src/main/res/layout/item_organization.xml
@@ -28,7 +28,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
-        android:text="Создайте или выберите организацию, это необходимо чтобы создать ивент. Выбранная организация будет видны для участников."
+        android:text="Создайте или выберите организацию, это необходимо чтобы создать ивент. Выбранная организация будет видна для участников."
         android:textColor="@color/prompt_color"
         android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@id/item_organization_image"
