--- a/app/src/main/res/layout/fragment_main_auth.xml
+++ b/app/src/main/res/layout/fragment_main_auth.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#181a20">
+    android:background="@color/nav_bg"
+    android:scrollbars="none">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -35,7 +36,7 @@
             android:id="@+id/auth_facebook"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="25dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="40dp"
             android:background="@drawable/bg_gradient_dark_grey_button"
             android:gravity="center"
@@ -61,7 +62,7 @@
             android:id="@+id/auth_google"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="25dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="18dp"
             android:background="@drawable/bg_gradient_dark_grey_button"
             android:gravity="center"
@@ -87,7 +88,7 @@
             android:id="@+id/view1"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="24dp"
             android:layout_marginTop="28dp"
             android:layout_marginEnd="12dp"
             android:background="#35383F"
@@ -102,7 +103,7 @@
             android:layout_height="1dp"
             android:layout_marginStart="12dp"
             android:layout_marginTop="28dp"
-            android:layout_marginEnd="32dp"
+            android:layout_marginEnd="24dp"
             android:background="#35383F"
             android:paddingTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -126,7 +127,7 @@
             android:id="@+id/button1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="25dp"
+            android:layout_marginHorizontal="16dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/bg_purple_button"
             android:text="@string/sign_in_with_password"
