--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="24dp"
-    android:paddingTop="24dp"
+    android:paddingHorizontal="16dp"
     android:focusable="true"
     android:clickable="true"
     android:background="@color/app_background">
 
     <ImageView
+        android:layout_marginTop="24dp"
         android:id="@+id/fragment_notifications_return_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
